--- a/components/variable-block/style/index.scss
+++ b/components/variable-block/style/index.scss
@@ -1,3 +1,3 @@
 .qyrc-variable-block {
-  overflow: hidden;
+  overflow: auto;
 }
