--- a/stories/pages/container/Modal/index.scss
+++ b/stories/pages/container/Modal/index.scss
@@ -9,8 +9,8 @@
 }
 
 .modal-demo-body {
-  width: 100%; 
-  height: 100%; 
+  width: 999px;
+  height: 999px;
   background: #04071b;
 }
 
